fix gap

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -52,7 +52,7 @@
 
   .gallery-list {
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 24px;
     list-style: none;
 
     justify-content: center;
@@ -63,6 +63,7 @@
 
   .gallery-item {
     display: inline-flex;
+    max-width: 338px;
   }
 
   .gallery-item:nth-child(1) {
